fixed spacing issue

--- a/css/index.css
+++ b/css/index.css
@@ -131,7 +131,7 @@ table {
 }
 html {
   font-size: 62.5%;
-  height: 101%;
+  height: 100%;
 }
 html,
 body {
@@ -139,7 +139,7 @@ body {
 }
 body {
   background-color: #363A67;
-  background: url('../images/art-bright-celebration.jpg');
+  background: url(../images/art-bright-celebration.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   overflow-x: hidden;
