--- a/less/global.less
+++ b/less/global.less
@@ -4,7 +4,7 @@
 
 html {
   font-size: 62.5%;
-  height: 101%;
+  height: 100%;
 
 }
 
@@ -16,13 +16,14 @@ html, body {
 //#FDB5C3
 
 body {
-  background-color: #363A67;
-  background: url('../images/art-bright-celebration.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  overflow-x: hidden;
-  height: 100vh;
-  .flexy(flex, column, null, center, center);
+    background-color: #363A67;
+    background: url(../images/art-bright-celebration.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
+    height: 100vh;
+
+    .flexy(flex, column, null, center, center);
   @media @desktop {
 
     max-width: 1200px;
